[package]
name = "yield-watch"
version = "0.1.0"
authors = ["Jon Huang <biohfj@gmail.com>"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.3.5", features = ["tls"] }
rocket_codegen = "0.3.5"
diesel = { version = "1.0", features = ["sqlite", "mysql"] }
mysql="*"
r2d2-diesel = "1.0"
r2d2 = "0.8"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.2"
tokio-core = "0.1"
serde_json = "1.0"
toml="0.2"
time="*"