[package]
name = "yield-watch"
version = "0.1.0"
authors = ["Jon Huang <biohfj@gmail.com>"]

[[bin]]
name = "yield_watch"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
rocket = { version = "0.3.5", features = ["tls"] }
rocket_codegen = "0.3.5"
rocket_contrib = { version = "0.3.5", features = ["json", "handlebars_templates"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mysql = "*"
r2d2 = "0.8"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.2"
tokio-core = "0.1"
toml = "0.2"
time = "*"
uuid = {features = ["v4"]}
sha1 = "^0.2.0"
rustc-serialize = "*"